--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "giraffe.fonsecakarsten.com.giraffe"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.ibm.watson.developer_cloud:visual-recognition:3.5.3'
     compile 'com.android.support:design:25.1.0'
+    compile 'gun0912.ted:tedpermission:1.0.3'
 }
