--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "giraffe.fonsecakarsten.com.giraffe"
+        applicationId "centenis.fonsecakarsten.com.centenis"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
@@ -25,9 +25,10 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.ibm.watson.developer_cloud:visual-recognition:3.5.3'
     compile 'com.android.support:design:25.1.0'
     compile 'gun0912.ted:tedpermission:1.0.3'
+    compile files('/Users/kfonseca/studioprojects/centenis/lib/quick-json-1.0.2.3.jar')
 }
